[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/03_Objects/01_Projectiles/_Projectiles.gd" type="Script" id=1]
[ext_resource path="res://source/03_Objects/01_Projectiles/04_Loogie/assets/ptui-Sheet.png" type="Texture" id=2]
[ext_resource path="res://source/03_Objects/01_Projectiles/04_Loogie/assets/ptui-impact-Sheet.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 0.495073
height = 1.03446

[sub_resource type="CapsuleShape2D" id=6]
radius = 0.489885
height = 1.02945

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.32
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "impact"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="HockLoogie" type="YSort"]

[node name="Loogie" type="KinematicBody2D" parent="."]
z_index = -1
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Loogie"]
position = Vector2( 5, 0 )
z_index = 1
texture = ExtResource( 3 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Loogie"]
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Attack" type="Area2D" parent="Loogie"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Loogie/Attack"]
rotation = 1.5708
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Loogie"]
autoplay = "idle"
anims/RESET = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/impact = SubResource( 3 )

[node name="SelfDestruct" type="Timer" parent="Loogie"]
wait_time = 0.5

[connection signal="body_entered" from="Loogie/Attack" to="Loogie" method="_on_Attack_body_entered"]
[connection signal="timeout" from="Loogie/SelfDestruct" to="Loogie" method="_on_SelfDestruct_timeout"]
